HelloUltraviolet/Fixtures/RejectedSource/Expressions/IfConditionNonBool/Expected.uv
//! Expected diagnostic metadata for the IfConditionNonBool rejected-source specimen.

expectedDiagnostic("E-SEM-2526", "diag.16.ControlExpressions")
